fix(soporte): compatibilidad Java 17 usando get(0) en lugar de getFirst()